tests/reference/asr-loop_test2-82d82ea.stderr
semantic error: Variable 'l1' is not declared
  --> tests/loop_test2.f:9:7 - 18:12
   |
 9 |          DO 140 L1 = 1,NQ
   |          ^^^^^^^^^^^^^^^^...
...
   |
18 |          indx = 1
   | ...^^^^^^^^^^^^ 'l1' is undeclared
